# website

./: .gitignore  about.md  index.html  index.md  site.hs  website.cabal
.github/workflows/: deploy-site.yml  docker-build.yml  main.yml
css/: default.css
docker/: Dockerfile  build-site.sh
docs/: CNAME  about.html  archive.html  blog.html  index.html  writing.html
docs/css/: default.css
docs/posts/: 2015-08-23-example.html  additive-generation.html
posts/: additive-generation.md  qrcli.md
site/: index.md  stack.yaml  website.cabal  writing.md
site/posts/: additive-generation.md  decomposing-limits.md  monads-programmers.md  qrcli.md  sheaves-hyperdescent.md
site/src/: Site.hs  Tikz.hs
site/templates/: blog.html  post-list.html  tikzcd.tex  tikzpicture.tex
templates/: default.html  tikzcd.tex
