cabal-version:       2.2

name:                website
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/website#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Achim Krause
maintainer:          achim.t.krause@gmail.com
copyright:           2025 Achim Krause
category:            Web
build-type:          Simple

executable website
  hs-source-dirs:      src
  main-is:             Site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       pandoc-types,
                       bytestring,
                       uri-encode,
                       text,
                       tagsoup,
                       containers,
                       mtl
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
  default-extensions:  OverloadedStrings
